force-app/main/default/objects/Email_Quote_Type__c/Email_Quote_Type__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Using for Email Quote Type URLs</description>
    <label>Email Quote Type</label>
</CustomObject>