force-app/main/default/objects/Email_Quote_Type__c/fields/Data_Order__c.field-meta.xml
<CustomField>
    <fullName>Data_Order__c</fullName>
    <label>Data Order</label>
    <length>5</length>
    <type>Text</type>
</CustomField>