force-app/main/default/objects/Email_Quote_Type__c/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <label>Field Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>