force-app/main/default/objects/Email_Quote_Type__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <label>Products</label>
    <length>100</length>
    <type>Text</type>
</CustomField>