force-app/main/default/objects/Email_Quote_Type__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <label>URL</label>
    <length>250</length>
    <type>Text</type>
</CustomField>